Fix margins for image tiles in vertical layout
Need a small margin between each tile when they're stacked vertically,
otherwise it looks odd.

--- a/_assets/stylesheets/_responsive.scss
+++ b/_assets/stylesheets/_responsive.scss
@@ -196,6 +196,10 @@
         &:last-child {
             margin-right: 0;
         }
+
+        &:not(:first-child) {
+            margin-top: 0;
+        }
     }
 
     .tiles-3 .tile {
